<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.fragments.PhoneFragment"
    android:background="@color/white_">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/appImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/fieldsLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/animation" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fieldsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:paddingBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/nextButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appImage">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/countryLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/country"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/tg"
                        android:dropDownAnchor="@+id/fieldsLayout"
                        android:dropDownHeight="150dp"
                        android:inputType="none"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:src="@drawable/black_arrow_drop_down"
                        app:layout_constraintBottom_toBottomOf="@+id/country"
                        app:layout_constraintLeft_toRightOf="@+id/country"
                        app:layout_constraintTop_toTopOf="@+id/country" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneFieldLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    app:boxCollapsedPaddingTop="5dp"
                    android:textColorHint="@color/black_"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/yellow_light"
                    app:hintTextAppearance="@style/TextAppearance.App.Hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/countryLayout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:prefixText="+228"
                    app:helperTextTextAppearance="@style/TextAppearance.App.Helper"
                    app:prefixTextAppearance="@style/TextAppearance.App.Prefix"
                    app:errorTextAppearance="@style/TextAppearance.App.Error"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:paddingTop="20dp"
                        android:paddingBottom="5dp"
                        android:textAppearance="@style/TextAppearance.App.Input"
                        android:textColor="@color/black_"/>

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/nextButton"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/yellow_light"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                app:icon="@drawable/white_arrow_forward"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="25dp"
                app:iconTint="@color/black_"
                app:layout_constraintBottom_toTopOf="@+id/accountLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fieldsLayout"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Button.Circle" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/accountLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/askForRegisterText"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/no_account"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toTopOf="@+id/registerButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:visibility="gone"
                    android:id="@+id/registerButton"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/register"
                    android:textColor="@color/yellow_"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/askForLoginText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/have_account"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toTopOf="@+id/loginButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/loginButton"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/log_in"
                    android:textColor="@color/yellow_"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>